--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "lodash": "^4.17.21",
     "method-override": "^3.0.0",
     "mongoose": "^8.16.1",
-    "react-hook-form": "^7.60.0"
+    "react-hook-form": "^7.60.0",
+    "vite": "^6.3.5"
   }
 }
